--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.firebaseui:firebase-ui-database:6.3.0'
     implementation "io.reactivex.rxjava3:rxjava:3.0.6"
+    implementation 'com.github.hani-momanii:SuperNova-Emoji:1.1'
 }
